--- a/Uriel/Programacion II/Leccion 2/EjerciciosCiclos05/nbproject/project.properties
+++ b/Uriel/Programacion II/Leccion 2/EjerciciosCiclos05/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EjercicioCiclos01.jar
+dist.jar=${dist.dir}/EjerciciosCiclos05.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EjercicioCiclos01
+dist.jlink.output=${dist.jlink.dir}/EjerciciosCiclos05
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EjercicioCiclos01
-main.class=Ciclos01.Ciclos01
+jlink.launcher.name=EjerciciosCiclos05
+main.class=Ciclos05.Ciclos05
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
