--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Ezequiel/Java/Leccion 2/CicloWhile/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/build/
+/Ezequiel/Java/Leccion 2/CicloWhile/JavaApplication28/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclo1/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos1/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos2/nbproject/private/
