--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclo1/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos1/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos2/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos3/nbproject/private/
