--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos1/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos2/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos3/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos4/nbproject/private/
+/Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos5/nbproject/private/
