Clase 4, creacion de clase persona y objetos con diferentes atributos

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos3/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos4/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos5/nbproject/private/
+/Ezequiel/Java/Clase4/JavaApplication35/nbproject/private/
