--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos4/nbproject/private/
 /Ezequiel/Java/Leccion 2/CicloWhile/EjercicioCiclos5/nbproject/private/
 /Ezequiel/Java/Clase4/JavaApplication35/nbproject/private/
+/Ezequiel/Java/Leccion 2/JavaApplication36/nbproject/private/
+/Ezequiel/Java/Clase4/Aritmetica/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos7/nbproject/private/
