Clase 4, Programacion, Ejercicios 8 y 9, Class Scanner y JOptionPane

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /Ezequiel/Java/Leccion 2/JavaApplication36/nbproject/private/
 /Ezequiel/Java/Clase4/Aritmetica/nbproject/private/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos7/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos8/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos8/build/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos9/nbproject/private/
