Commit clase 6: ciclo for, paso por parametro y referencia, constuctores vacios y con parametros

--- a/Uriel/Programacion II/Leccion 4/PasoPorValor/nbproject/project.properties
+++ b/Uriel/Programacion II/Leccion 4/PasoPorValor/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/LeccionClasesObjetos.jar
+dist.jar=${dist.dir}/PasoPorValor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/LeccionClasesObjetos
+dist.jlink.output=${dist.jlink.dir}/PasoPorValor
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=LeccionClasesObjetos
-main.class=Clases.PruebaPersona
+jlink.launcher.name=PasoPorValor
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
