--- a/Uriel/Programacion II/Leccion 2/EjerciciosCiclos10/nbproject/project.properties
+++ b/Uriel/Programacion II/Leccion 2/EjerciciosCiclos10/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/LeccionClasesObjetos.jar
+dist.jar=${dist.dir}/EjerciciosCiclos10.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/LeccionClasesObjetos
+dist.jlink.output=${dist.jlink.dir}/EjerciciosCiclos10
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=LeccionClasesObjetos
-main.class=Clases.PruebaPersona
+jlink.launcher.name=EjerciciosCiclos10
+main.class=ciclos10.CiclosJOP10
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
