Programacion 2, Java, Clase 6, Proyecto Caja, Parametros por valor y por referencia

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Ezequiel/Java/Leccion 2/EjercicioCiclos8/nbproject/private/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos8/build/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos9/nbproject/private/
+/Ezequiel/Java/Leccion 2/ProyectoCaja/nbproject/private/
+/Ezequiel/Java/Leccion 2/HolaMundo/nbproject/private/
