Programacion 2, Clase 6, return y null, Ejercicio10 Scanner y JOptionPane

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Ezequiel/Java/Leccion 2/EjercicioCiclos9/nbproject/private/
 /Ezequiel/Java/Leccion 2/ProyectoCaja/nbproject/private/
 /Ezequiel/Java/Leccion 2/HolaMundo/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos10/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos10/build/
