Programacion 2, Java, Clase 7, POO parte 5, this parte 1, Ejercicio ciclos 11 y 12 con Class Scanner y JOptionPane

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 
 /Ezequiel/Java/Leccion 2/EjercicioCiclos9/nbproject/private/
 
+/Ezequiel/Java/Leccion 2/EjercicioCiclos11/nbproject/private/
+/Ezequiel/Java/Leccion 2/EjercicioCiclos12/nbproject/private/
