--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 
 /Ezequiel/Java/Leccion 2/EjercicioCiclos11/nbproject/private/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos12/nbproject/private/
+/Ezequiel/Java/Leccion 2/Encapsulamiento/nbproject/private/
