Programacion 2, Java, clase 8, Encapsulamiento y contexto estatico

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /Ezequiel/Java/Leccion 2/EjercicioCiclos11/nbproject/private/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos12/nbproject/private/
 /Ezequiel/Java/Leccion 2/Encapsulamiento/nbproject/private/
+/Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/private/
