Programacion 2, Java, Clase 8, Parte 2 de contexto estatico y ejercicio

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Ezequiel/Java/Leccion 2/EjercicioCiclos12/nbproject/private/
 /Ezequiel/Java/Leccion 2/Encapsulamiento/nbproject/private/
 /Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/private/
+/Ezequiel/Java/Leccion 5/ContextoEstatico/build/
