--- a/Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/project.properties
+++ b/Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ContextoEstatico
-main.class=
+main.class=test.PersonaPrueba
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
