agrego mqueta integrador

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Ezequiel/Java/Leccion 2/EjercicioCiclos8/nbproject/private/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos8/build/
 /Ezequiel/Java/Leccion 2/EjercicioCiclos9/nbproject/private/
+/Silvio/Programación II/maquetaIntegrador/nbproject/private/
