--- a/Jonatan/Java/leccion4/Aritmetica/nbproject/private/private.properties
+++ b/Jonatan/Java/leccion4/Aritmetica/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jona\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\Jonathan\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
