ADD Clase 9 de JAVA con HERENCIAS

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@
 /Jonatan/Java/leccion5/Encapsulamiento/build/
 /Jonatan/Java/leccion5/ContextoEstatico/nbproject/private/
 /Jonatan/Java/leccion5/ContextoEstatico/build/
+/Jonatan/Java/leccion6/Herencia/nbproject/private/
+/Jonatan/Java/leccion6/Herencia/build/
