--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Ezequiel/Java/Leccion 2/Encapsulamiento/nbproject/private/
 /Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/private/
 /Ezequiel/Java/Leccion 5/ContextoEstatico/build/
+/Ezequiel/Java/Leccion6/Herencia/nbproject/private/
