Programacion 2, Java, Clase 9, finalizacion de la tarea clase Cliente

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /Ezequiel/Java/Leccion 5/ContextoEstatico/nbproject/private/
 /Ezequiel/Java/Leccion 5/ContextoEstatico/build/
 /Ezequiel/Java/Leccion6/Herencia/nbproject/private/
+/Ezequiel/Java/Leccion6/Herencia/build/
