Programacion 2, Java, Clase 10, Ejercicios 1, 2, 3 de la tarea

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /Ezequiel/Java/Leccion7/Paquetes/nbproject/private/
 /Ezequiel/Java/Leccion8/PalabraFinal/nbproject/private/
 /Ezequiel/Java/Leccion9/Arreglos/nbproject/private/
+/Ezequiel/Java/Leccion9/Arreglos_Ejercicios/nbproject/private/
