Programacion 2, Java, Clase 12, Matriz de objetos y creacion de metodo para imprimir la matriz

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Ezequiel/Java/Leccion8/PalabraFinal/nbproject/private/
 /Ezequiel/Java/Leccion9/Arreglos/nbproject/private/
 /Ezequiel/Java/Leccion9/Arreglos_Ejercicios/nbproject/private/
+/Ezequiel/Java/Leccion10/Matrices/nbproject/private/
