--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /Ezequiel/Java/Leccion9/Arreglos/nbproject/private/
 /Ezequiel/Java/Leccion9/Arreglos_Ejercicios/nbproject/private/
 /Ezequiel/Java/Leccion10/Matrices/nbproject/private/
+/Ezequiel/Java/Leccion9/Matrices_Ejercicios/nbproject/private/
