--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@
 /Jonatan/Java/leccion9/Arreglos_Ejercicios_2/build/
 /Jonatan/Java/leccion9/Arreglos_Ejercicios_3/nbproject/private/
 /Jonatan/Java/leccion9/Arreglos_Ejercicios_3/build/
+/Jonatan/Java/leccion10/Matrices/nbproject/private/
+/Jonatan/Java/leccion10/Matrices/build/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_3/nbproject/private/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_3/build/
