Terminando los 3 ejercicios de Java clase 12

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@
 /Jonatan/Java/leccion10/Matrices/build/
 /Jonatan/Java/leccion9/Matriz_Ejercicio_3/nbproject/private/
 /Jonatan/Java/leccion9/Matriz_Ejercicio_3/build/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_3/dist/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_4/nbproject/private/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_4/build/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_5/nbproject/private/
+/Jonatan/Java/leccion9/Matriz_Ejercicio_5/build/
