--- a/Alexis/java/leccion10/Matriz_Ejercicio_4/nbproject/project.properties
+++ b/Alexis/java/leccion10/Matriz_Ejercicio_4/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Matrices
-application.vendor=perez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Matrices.jar
+dist.jar=${dist.dir}/Matriz_Ejercicio_4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Matrices
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Matriz_Ejercicio_4
 excludes=
 includes=**
 jar.compress=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Matrices
-main.class=test.TestMatrices
+jlink.launcher.name=Matriz_Ejercicio_4
+main.class=matriz_ejercicio_4.Matriz_Ejercicio_4
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
