Programacion 2, Java, Clase 13, Creacion de clases Producto, Orden y VentasTest, finalizacion de la tarea de creacion de objetos

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /Jonatan/Java/leccion9/Arreglos_Ejercicios_3/nbproject/private/
 /Jonatan/Java/leccion9/Arreglos_Ejercicios_3/build/
 
+/Ezequiel/Java/Leccion11/Ventas/nbproject/private/
